syntax = "proto3";

option go_package = "github.com/ahmetsah/industrial-historian/go-services/pkg/proto";

package historian.v1;

import "common.proto";

service HistorianQuery {
  rpc Query (QueryRequest) returns (stream SensorData);
}

message QueryRequest {
  string sensor_id = 1;
  int64 start_ts = 2;
  int64 end_ts = 3;
  int32 max_points = 4;
}
